--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/pwa-elements": "^3.3.0",
+    "chart.js": "^4.4.4",
     "ionicons": "^7.2.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.1",
